--- a/biome.jsonc
+++ b/biome.jsonc
@@ -4,7 +4,7 @@
 		"enabled": true,
 		"clientKind": "git",
 		"useIgnoreFile": true,
-		"defaultBranch": "main"
+		"defaultBranch": "master"
 	},
 	"html": {
 		"experimentalFullSupportEnabled": false
