--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 		"@shikijs/themes": "^1.26.1",
 		"astro": "^5.16.6",
 		"astro-expressive-code": "^0.38.3",
+		"pnpm-sync-lib": "^0.3.3",
 		"sharp": "^0.33.5"
 	},
 	"devDependencies": {
